[package]
name = "github_issues_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tokio = { version = "1.21.2", features = ["full"] }
serde = "1.0.147"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
anyhow = "1.0.66"
serde_json = "1.0.87"
tower-http = { version = "0.3.4", features = ["trace"] }
octocrab = "0.16"

minreq = { version = "2.6.0", features = ["punycode", "https", "json-using-serde"] }